--- a/nico.ini
+++ b/nico.ini
@@ -60,7 +60,7 @@ custom_proxy_group=🍃 散列负载均衡`load-balance`.*`http://www.gstatic.co
 custom_proxy_group=🍃 轮询负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`round-robin
 
 ; 修改后的节点选择组，在原基础上新增自动选择、散列负载均衡、轮询负载均衡（移除香港均衡相关组，如 🔯 香港故转）
-custom_proxy_group=🚀 节点选择`select`[]自动选择`[]散列负载均衡`[]轮询负载均衡`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🍃 散列负载均衡`[]🍃 轮询负载均衡`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 日本故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换
