--- a/nico.ini
+++ b/nico.ini
@@ -50,33 +50,20 @@ ruleset=🎯 全球直连,[]GEOIP,CN,no-resolve
 ruleset=🐟 漏网之鱼,[]FINAL
 
 ;策略组定义
-; 新增的自动选择组（url-test 类型，针对全部节点）
-custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-; 新增的散列负载均衡组（load-balance with consistent-hashing，针对全部节点）
-custom_proxy_group=🍃 散列负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`consistent-hashing
-
-; 新增的轮询负载均衡组（load-balance with round-robin，针对全部节点）
-custom_proxy_group=🍃 轮询负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`round-robin
 
 ; 修改后的节点选择组，在原基础上新增自动选择、散列负载均衡、轮询负载均衡（移除香港均衡相关组，如 🔯 香港故转）
 custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🍃 散列负载均衡`[]🍃 轮询负载均衡`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
+; 新增的自动选择组（url-test 类型，针对全部节点）
+custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
+; 新增的散列负载均衡组（load-balance with consistent-hashing，针对全部节点）
+custom_proxy_group=🍃 散列负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`consistent-hashing
+; 新增的轮询负载均衡组（load-balance with round-robin，针对全部节点）
+custom_proxy_group=🍃 轮询负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`round-robin
+custom_proxy_group=🐸 手动切换`select`.*
 
-custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]⭐ 日本故转`[]🔯 日本故转`[]🔯 加坡故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🇺🇲 美国节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇭🇰 香港节点`[]🏡 家宽节点`[]🐸 手动切换
-custom_proxy_group=💧 Copilot`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇺🇲 美国节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🏡 家宽节点`[]🐸 手动切换
-custom_proxy_group=🐬 OneDrive`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🪟 Microsoft`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍀 Google`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=👨🏿‍💻 GitHub`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🍎 Apple`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=♻️ Speedtest`select`[]DIRECT`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🐸 手动切换`[]🚀 节点选择
-custom_proxy_group=🎵 TikTok`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
-custom_proxy_group=🎥 Netflix`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🎥 奈飞节点`[]🐸 手动切换
-custom_proxy_group=📲 Telegram`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=📢 FCM`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🐸 手动切换
-custom_proxy_group=🎮 游戏平台`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
-custom_proxy_group=🌍 国外媒体`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 香港故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇯🇵 日本节点`[]🇭🇰 香港节点`[]🇸🇬 加坡节点`[]🛩️ 高速节点`[]🐸 手动切换
+; 新增的节点组定义（如果您的订阅有特定标签，可以进一步调整匹配规则，这里用 .* 匹配全部节点）
+custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 custom_proxy_group=🎞️ 国内媒体`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]🐸 手动切换
 custom_proxy_group=🛑 广告拦截`select`[]REJECT`[]DIRECT
@@ -85,14 +72,13 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]🐸 手动切换
 
-; 新增的节点组定义（如果您的订阅有特定标签，可以进一步调整匹配规则，这里用 .* 匹配全部节点）
+
 custom_proxy_group=🇭🇰 香港节点`select`(香港|HK|Hong Kong|🇭🇰|hk|港)
+custom_proxy_group=🇨🇳 台湾节点`select`(台湾|🇨🇳|TW|Taiwan|🇹🇼|tw|台)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|JP|Japan|🇯🇵|jp|日)
 custom_proxy_group=🇸🇬 加坡节点`select`(新加坡|SG|Singapore|🇸🇬|sg|狮城)
 custom_proxy_group=🇺🇲 美国节点`select`(美国|US|USA|United States|🇺🇲|us|美)
-custom_proxy_group=🌐 其他地区`select`(台湾|TW|Taiwan|🇹🇼|tw|台|澳|澳大利亚|AU|Australia|🇦🇺|au|韩|韩国|KR|Korea|🇰🇷|kr|印尼|印度尼西亚|ID|Indonesia|🇮🇩|id|马来西亚|MY|Malaysia|🇲🇾|my|俄|俄罗斯|RU|Russia|🇷🇺|ru|印|印度|IN|India|🇮🇳|in|英|英国|UK|United Kingdom|🇬🇧|uk|德|德国|DE|Germany|🇩🇪|de|法|法国|FR|France|🇫🇷|fr|意|意大利|IT|Italy|🇮🇹|it|西|西班牙|ES|Spain|🇪🇸|es|荷|荷兰|NL|Netherlands|🇳🇱|nl|瑞|瑞士|CH|Switzerland|🇨🇭|ch|加|加拿大|CA|Canada|🇨🇦|ca|巴|巴西|BR|Brazil|🇧🇷|br|阿|阿根廷|AR|Argentina|🇦🇷|ar|土|土耳其|TR|Turkey|🇹🇷|tr|以|以色列|IL|Israel|🇮🇱|il|南非|ZA|South Africa|🇿🇦|za|越|越南|VN|Vietnam|🇻🇳|vn|菲|菲律宾|PH|Philippines|🇵🇭|ph|泰|泰国|TH|Thailand|🇹🇭|th|乌|乌克兰|UA|Ukraine|🇺🇦|ua|墨|墨西哥|MX|Mexico|🇲🇽|mx)
+custom_proxy_group=🌐 其他地区`select`(澳|澳大利亚|AU|Australia|🇦🇺|au|韩|韩国|KR|Korea|🇰🇷|kr|印尼|印度尼西亚|ID|Indonesia|🇮🇩|id|马来西亚|MY|Malaysia|🇲🇾|my|俄|俄罗斯|RU|Russia|🇷🇺|ru|印|印度|IN|India|🇮🇳|in|英|英国|UK|United Kingdom|🇬🇧|uk|德|德国|DE|Germany|🇩🇪|de|法|法国|FR|France|🇫🇷|fr|意|意大利|IT|Italy|🇮🇹|it|西|西班牙|ES|Spain|🇪🇸|es|荷|荷兰|NL|Netherlands|🇳🇱|nl|瑞|瑞士|CH|Switzerland|🇨🇭|ch|加|加拿大|CA|Canada|🇨🇦|ca|巴|巴西|BR|Brazil|🇧🇷|br|阿|阿根廷|AR|Argentina|🇦🇷|ar|土|土耳其|TR|Turkey|🇹🇷|tr|以|以色列|IL|Israel|🇮🇱|il|南非|ZA|South Africa|🇿🇦|za|越|越南|VN|Vietnam|🇻🇳|vn|菲|菲律宾|PH|Philippines|🇵🇭|ph|泰|泰国|TH|Thailand|🇹🇭|th|乌|乌克兰|UA|Ukraine|🇺🇦|ua|墨|墨西哥|MX|Mexico|🇲🇽|mx)
 custom_proxy_group=🏡 家宽节点`select`(家宽|家庭宽带|Home Broadband)
-custom_proxy_group=🛩️ 高速节点`select`(高速|High Speed)
-custom_proxy_group=🕊️便宜节点`select`(便宜|Cheap)
-custom_proxy_group=🐸 手动切换`select`.*
-custom_proxy_group=🎥 奈飞节点`select`(Netflix|奈飞|NF)
+custom_proxy_group=🛩️ 高速节点`select`(高速|High Speed|PRO)
+
