--- a/nico.ini
+++ b/nico.ini
@@ -53,14 +53,14 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ; 修改后的节点选择组，在原基础上新增自动选择、散列负载均衡、轮询负载均衡（移除香港均衡相关组，如 🔯 香港故转）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🍃 散列负载均衡`[]🍃 轮询负载均衡`[]🔯 日本故转`[]🔯 加坡故转`[]⭐ 日本故转`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🍃 散列负载均衡`[]🍃 轮询负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
 ; 新增的自动选择组（url-test 类型，针对全部节点）
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ; 新增的散列负载均衡组（load-balance with consistent-hashing，针对全部节点）
 custom_proxy_group=🍃 散列负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`consistent-hashing
 ; 新增的轮询负载均衡组（load-balance with round-robin，针对全部节点）
 custom_proxy_group=🍃 轮询负载均衡`load-balance`.*`http://www.gstatic.com/generate_204`300,,50`round-robin
-custom_proxy_group=🐸 手动切换`select`.*
+
 
 ; 新增的节点组定义（如果您的订阅有特定标签，可以进一步调整匹配规则，这里用 .* 匹配全部节点）
 custom_proxy_group=📹 YouTube`select`[]🚀 节点选择`[]🇭🇰 香港节点`[]🇨🇳 台湾节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
@@ -72,7 +72,7 @@ custom_proxy_group=🆎 AdBlock`select`[]REJECT`[]DIRECT
 custom_proxy_group=🛡️ 隐私防护`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]🐸 手动切换
 
-
+custom_proxy_group=🐸 手动切换`select`.*
 custom_proxy_group=🇭🇰 香港节点`select`(香港|HK|Hong Kong|🇭🇰|hk|港)
 custom_proxy_group=🇨🇳 台湾节点`select`(台湾|🇨🇳|TW|Taiwan|🇹🇼|tw|台)
 custom_proxy_group=🇯🇵 日本节点`select`(日本|JP|Japan|🇯🇵|jp|日)
