--- a/nico.ini
+++ b/nico.ini
@@ -53,7 +53,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 
 
 ; 修改后的节点选择组，在原基础上新增自动选择、散列负载均衡、轮询负载均衡（移除香港均衡相关组，如 🔯 香港故转）
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🍃 散列负载均衡`[]🍃 轮询负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🕊️便宜节点`[]🐸 手动切换`[]DIRECT
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]🍃 散列负载均衡`[]🍃 轮询负载均衡`[]🇭🇰 香港节点`[]🇯🇵 日本节点`[]🇸🇬 加坡节点`[]🇺🇲 美国节点`[]🌐 其他地区`[]🏡 家宽节点`[]🛩️ 高速节点`[]🐸 手动切换`[]DIRECT
 ; 新增的自动选择组（url-test 类型，针对全部节点）
 custom_proxy_group=♻️ 自动选择`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 ; 新增的散列负载均衡组（load-balance with consistent-hashing，针对全部节点）
